--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "mon-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Bot Discord hébergé sur Render",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.21.0",
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.0.3",
     "node-schedule": "^2.1.1"
   }
 }
